project1_part_b/matrixmult-50517025.err

The following have been reloaded with a version change:
  1) gcc/4.8.5 => gcc/11.4.0


Currently Loaded Modules:
  1) StdEnv   2) gcc/11.4.0   3) openblas/0.3.20

 

dgemm-blocked.c: In function 'square_dgemm':
dgemm-blocked.c:39:3: error: expected declaration or statement at end of input
   39 |   }
      |   ^
make: *** [Makefile:46: dgemm-blocked.o] Error 1
/var/spool/slurm/slurmd/state/job50517025/slurm_script: line 23: ./benchmark-blocked: No such file or directory
/var/spool/slurm/slurmd/state/job50517025/slurm_script: line 26: ./benchmark-blas: No such file or directory
"timing.gp", line 15: warning: Skipping data file with no valid points
"timing.gp", line 15: warning: Skipping data file with no valid points
